# clearwing

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  package-lock.json  port_scanner.py  pyproject.toml  vulnexploit.py
.github/workflows/: ci.yml  docker.yml  docs.yml
clearwing/: __init__.py  capabilities.py
clearwing/agent/: __init__.py  graph.py  operator.py  prompts.py  protocols.py  runtime.py  state.py  tooling.py
clearwing/agent/specialists/: __init__.py  blue_agent.py  exploit_agent.py  planner_agent.py  recon_agent.py  reporter_agent.py
clearwing/agent/tools/: __init__.py
clearwing/analysis/: __init__.py  source_analyzer.py  taint_tracker.py
clearwing/bench/: crash_classifier.py
clearwing/core/: __init__.py  config.py  engine.py  events.py  helpers.py  logger.py  models.py  module_loader.py
clearwing/core/skills/: loader.py
clearwing/data/database/: __init__.py  models.py
clearwing/data/knowledge/: graph.py
clearwing/data/memory/: __init__.py  episodic_memory.py  semantic_memory.py  session_store.py  summarizer.py
clearwing/eval/: __init__.py  metrics.py  preprocessing.py
clearwing/exploitation/: __init__.py
clearwing/exploitation/exploiters/: __init__.py  metasploit_bridge.py  password_crackers.py  privilege_escalation.py  rce_exploits.py
clearwing/exploitation/payloads/: beacon.py  corpus.py  encoder.py  obfuscator.py  watermark.py
clearwing/findings/: __init__.py  types.py
clearwing/llm/: __init__.py  chat.py  native.py
clearwing/mcp/: client.py  server.py
clearwing/observability/: __init__.py  integration.py  metrics.py  telemetry.py  tracer.py
clearwing/providers/: __init__.py  catalog.py  env.py  local_llm.py  manager.py  openai_oauth.py
clearwing/reporting/: __init__.py  report_generator.py
clearwing/reporting/remediation/: __init__.py  generator.py
clearwing/runners/cicd/: __init__.py  runner.py
clearwing/runners/parallel/: executor.py
clearwing/runners/workflow/: __init__.py  engine.py
clearwing/safety/audit/: logger.py  metrics.py
clearwing/safety/auth/: __init__.py  config.py
clearwing/safety/guardrails/: input_guardrails.py  output_guardrails.py  patterns.py
clearwing/safety/scoring/: __init__.py  cvss.py  dedup.py
clearwing/sandbox/: __init__.py  builders.py  container.py  hunter_sandbox.py  registry.py
clearwing/scanning/: __init__.py  os_scanner.py  ot_scanner.py  port_scanner.py  service_scanner.py  vulnerability_scanner.py
clearwing/sourcehunt/: __init__.py  callgraph.py  commit_monitor.py  config.py  disclosure.py  disclosure_workflow.py  elaboration.py  entry_points.py  exploiter.py  findings_pool.py  github_checks.py  harness_generator.py  hunter.py  mechanism_memory.py  nday_filter.py  patcher.py  poc_runner.py  pool.py  preprocessor.py  ranker.py  reporter.py  retro_hunt.py  reveng_decompiler.py  reveng_reconstructor.py  runner.py  seed_corpus.py  semgrep_sidecar.py  state.py  taint.py  variant_loop.py  verifier.py  webhook_server.py
clearwing/ui/: cli.py
clearwing/ui/commands/: __init__.py  ci.py  config.py  doctor.py  eval.py  graph.py  history.py  interactive.py  mcp.py  operate.py  parallel.py  report.py  scan.py  sessions.py  setup.py  sourcehunt.py  webui.py
clearwing/ui/tui/: app.py  streaming_parser.py
clearwing/ui/web/: app.py
docs/: 1password_log.md  FFmpeg.md  api.md  architecture.md  cli.md  index.md  providers.md  quickstart.md  web-api.md
tests/: README.md  test_agent.py  test_agent_internals.py  test_agents.py  test_analysis.py  test_audit.py  test_auth.py  test_band_promotion.py  test_browser_tools.py  test_cicd.py  test_core.py  test_deep_agent_loop.py  test_dynamic_tools.py  test_entry_point_sharding.py  test_eval_preprocessing.py  test_events.py  test_exploiters.py  test_findings_pool.py  test_findings_unified.py  test_graph_refactor.py  test_guardrails.py  test_hunter_sandbox.py  test_kali_docker.py  test_knowledge.py  test_knowledge_crypto_entities.py  test_knowledge_source_entities.py  test_mcp.py  test_memory.py  test_military_features.py  test_minimax_compat.py  test_observability.py  test_openai_oauth.py  test_operator.py  test_parallel.py  test_parallel_runner_factory.py  test_parallel_tiered.py  test_payloads.py  test_providers.py  test_providers_env.py  test_proxy_tools.py  (+42 more)
vulnexploit/: __init__.py
vulnexploit/agent/: __init__.py  graph.py  prompts.py  state.py
vulnexploit/agents/: __init__.py  exploit_agent.py  planner_agent.py  recon_agent.py  reporter_agent.py
vulnexploit/audit/: __init__.py  logger.py  metrics.py
vulnexploit/auth/: __init__.py  config.py
vulnexploit/cicd/: __init__.py  runner.py  sarif.py
vulnexploit/config/: default.yaml  exploits.yaml
vulnexploit/core/: __init__.py  config.py  engine.py  logger.py  module_loader.py
vulnexploit/database/: models.py
vulnexploit/events/: __init__.py  bus.py
vulnexploit/exploiters/: __init__.py  metasploit_bridge.py  password_crackers.py  privilege_escalation.py  rce_exploits.py
vulnexploit/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py  patterns.py
vulnexploit/interface/: __init__.py  app.py  streaming_parser.py
vulnexploit/knowledge/: graph.py
vulnexploit/mcp/: server.py
vulnexploit/memory/: __init__.py  episodic_memory.py  semantic_memory.py  session_store.py  summarizer.py
vulnexploit/parallel/: __init__.py  executor.py
vulnexploit/payloads/: __init__.py  corpus.py  encoder.py
vulnexploit/providers/: __init__.py  manager.py
vulnexploit/remediation/: __init__.py  generator.py
vulnexploit/reporting/: report_generator.py
vulnexploit/scanners/: __init__.py  os_scanner.py  port_scanner.py  service_scanner.py  vulnerability_scanner.py
vulnexploit/scoring/: __init__.py  cvss.py  dedup.py
vulnexploit/skills/: __init__.py  loader.py
vulnexploit/telemetry/: tracker.py
vulnexploit/tests/: test_agent.py  test_events.py  test_guardrails.py  test_memory.py  test_skills.py  test_telemetry.py
vulnexploit/ui/: __init__.py  cli.py
vulnexploit/utils/: __init__.py  helpers.py
vulnexploit/workflow/: __init__.py  engine.py
(+57 files in other folders)
