[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearwing"
version = "1.0.0"
description = "Autonomous vulnerability scanner and source-code hunter built on LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Eric Hartford", email = "eric@quixi.ai" },
]
maintainers = [
    { name = "Eric Hartford", email = "eric@quixi.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core
    "scapy>=2.5.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    # Network protocols
    "asyncssh>=2.13.0",
    "pysmb>=1.2.6",
    # Reporting
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    # AI Agent (LangGraph)
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "docker>=7.0.0",
    # TUI
    "textual>=0.47.0",
    # Token counting
    "tiktoken>=0.5.0",
    # Knowledge graph
    "networkx>=3.0",
    # Memory
    "numpy>=1.24.0",
    # Source hunting (Overwing) — callgraph extraction
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
]

[project.optional-dependencies]
metasploit = ["pymetasploit3>=1.0.0"]
browser = ["playwright>=1.40.0"]
vector = [
    "sentence-transformers>=2.2.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "clearwing[metasploit,browser,vector,web,dev]",
]

[project.urls]
Homepage = "https://github.com/Lazarus-AI/clearwing"
Repository = "https://github.com/Lazarus-AI/clearwing"
Issues = "https://github.com/Lazarus-AI/clearwing/issues"
Documentation = "https://github.com/Lazarus-AI/clearwing#readme"

[project.scripts]
clearwing = "clearwing:main"

[tool.setuptools.packages.find]
include = ["clearwing*"]

[tool.setuptools.package-data]
clearwing = ["core/config_data/*.yaml", "core/skills/vulnerabilities/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Present but not gated in CI until Phase 4. The select set is deliberately
# conservative — pycodestyle errors, pyflakes, import order, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line-too-long — deferred; many tool docstrings exceed 100
    "B008",  # function calls in default args — frequent in langgraph/pydantic
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately import after pytest.importorskip() / sys.path munging.
"tests/**" = ["B", "E402", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Phase 3e: scoped mypy gate anchored on the unified Finding types.
#
# `clearwing.findings.*` gets the full strict treatment.
# `clearwing.sourcehunt.*` gets `warn_unused_ignores` + the rest of the
# strict settings but NOT `disallow_untyped_defs` — the sourcehunt
# package carries pre-existing missing-annotation debt that is
# orthogonal to the Finding unification. The relaxed gate still catches
# real type regressions (wrong arg types, Literal narrowing, dict vs
# Finding mismatches, attribute typos, call-arg drift on external APIs).
#
# TODO Phase 5: ~40 untyped defs remain in clearwing/sourcehunt/ (across
# runner.py, pool.py, hunter.py, webhook_server.py, taint.py,
# callgraph.py, harness_generator.py, poc_runner.py, verifier.py,
# variant_loop.py, reporter.py, patcher.py). When Phase 5's broader
# typing pass lands, flip `disallow_untyped_defs = true` for
# clearwing.sourcehunt.* and delete this comment.
[[tool.mypy.overrides]]
module = [
    "clearwing.findings.*",
]
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "clearwing.sourcehunt.*",
]
disallow_untyped_defs = false
warn_unused_ignores = true
